<resources>
    <string name="app_name">Evport</string>
    <string name="welcome_back">

    </string>
    <string name="free_music_json">

    </string>
    <string name="library_json">

    </string>
    <string name="play">

    </string>
    <string name="notify_of_play">

    </string>
    <string name="network_unconnected">

    </string>
    <string name="play_repeat">

    </string>
    <string name="play_repeat_once">

    </string>
    <string name="play_shuffle">

    </string>
    <string name="unfinished">

    </string>
    <string name="recently">

    </string>
    <string name="best_practice">

    </string>
    <string name="app_summary">

    </string>
    <string name="project_title">
        </string>
    <string name="search_page_tip">

    </string>
    <string name="test_download">

    </string>
    <string name="test_lifecycle_download">

    </string>
    <string name="search_back">

    </string>
    <string name="relearn_android"></string>
    <string name="learn_more_friends">

    </string>
    <string name="learn_more">Learn More</string>
    <string name="debug_fragment_databinding_warning"></string>
    <string name="debug_activity_databinding_warning"></string>
    <string name="login_title">

    </string>
    <string name="login_content">

    </string>
    <string name="Copyright">

    </string>
    <string name="text_com_name">

    </string>
    <string name="activity_title_internet_api">动态API设置</string>
    <string name="net_ping_api">确定</string>
    <string name="net_hint_api">请输入IP(域名)地址</string>
    <string name="net_hint_port_api">请输入端口</string>
    <string name="net_error_api">设置失败！</string>
    <string name="net_success_api">设置成功！</string>
    <string name="net_notice_api">请输入正确的IP地址</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_password_hint">8-16位大小写英文和数字组合</string>
    <string name="login">Login</string>
    <string name="CreateAccount">Create an account</string>
    <string name="forgetPassword">Forgot password?</string>
    <string name="account">Email</string>
    <string name="me">Account</string>
    <string name="personal_center">个人中心</string>
    <string name="authentication_code_login">验证码登录</string>
    <string name="password_login">密码登录</string>
    <string name="verification_code">Verification Code</string>
    <string name="emailCode">Email verification code</string>
    <string name="Username">User name</string>
    <string name="Areacode">Area code</string>
    <string name="phone">Phone</string>
    <string name="Birthday">Birthday</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="signUp">Sign up</string>
    <string name="Confirm">Confirm</string>
    <string name="old_pwd">旧密码  8-16位大小写英文和数字组合</string>
    <string name="Newpassword">新密码  8-16位大小写英文和数字组合</string>
    <string name="charge_point_start_password">Charge point start password</string>
    <string name="white_list_of_charging_posts">White list of charging posts</string>
    <string name="charger_id">Charger ID</string>
    <string name="charge_point_setting">Charge point setting</string>
    <string name="search">Search</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="thank_you_very_much_for_nusing_this_app_n_we_bring_you_a_different_nexperience">Thank you very much for\nusing this app.\n We bring you a different\nexperience</string>
    <string name="edit_white_list">Edit white list</string>
    <string name="stats">Stats</string>
    <string name="record">Record</string>
    <string name="order">Record</string>
    <string name="sulfur_dioxide">Sulfur dioxide</string>
    <string name="carbon_intensity">Carbon intensity</string>
    <string name="charging_times">Charging sessions</string>
    <string name="dust_emission">Dust emission</string>
    <string name="danwei_L">(kg)</string>
    <string name="i_don_t_have_an_account">I don’t have an account.</string>
    <string name="sign_up">sign up</string>
    <string name="not_registered_create_an_account">Not registered yet ?</string>
    <string name="reset_reset_password_and_login">Reset password and login</string>
    <string name="reset_you_agree_to_our">By signing up, you agree to our</string>
    <string name="reset_user_agreement">  \t User Agreement</string>
    <string name="reset_and">  \tand</string>
    <string name="reset_privacy_policy">Privacy Policy</string>
    <string name="cancel_tv">cancel</string>
    <string name="filter">filter</string>
    <string name="reset_tv">Reset</string>
    <string name="need_location_permission">We need location permission for application function using</string>
    <string name="home">Home</string>
    <string name="favorites">favorites</string>
    <string name="save_as_default_filter">Save as default filter</string>
    <string name="save_as_default_Min_Power">Min.Power</string>
    <string name="charge">Charge</string>
    <string name="toast_not_select_image">you have not select image</string>
    <string name="log_out">退出登录</string>
    <string name="_2020_powercore_inc">© 2020 Powercore, Inc</string>
    <string name="text_Your_feedback">Please enter(pleaseholder)...</string>
    <string name="rating">Rating</string>
    <string name="toast_content_is_empty">content is empty</string>
    <string name="text_commit">Submit</string>
    <string name="text_Your_comment">How is the charging experience this time? Leave a comment to tell everyone</string>
    <string name="acTitle_bluetooth">Connect device</string>
    <string name="clipping">Clipping...</string>
    <string name="Loading">Loading...</string>
    <string name="picker_str_sure">Sure</string>
    <string name="picker_str_error">Click Error</string>
    <string name="up_the_choice">Do you want to give up the choice？</string>
    <string name="main_bt_disable_msg">Bluetooth is disable</string>
    <string name="main_location_disable_msg">Location is disable</string>
    <string name="change_language">Change Language</string>
    <string name="language_selection">Language Selection</string>
    <string name="choose_the_language_you_are_proficient_in">Choose the language you are proficient in</string>
    <string name="reset_password">Reset password</string>
    <string name="check_password">确认密码</string>
    <string name="setting_new_password">设置新密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="all">/所有</string>
    <string name="idle">空闲</string>
    <string name="operator">Operator</string>
    <string name="socket_type">Connector Type</string>
    <string name="type">Type</string>
    <string name="commonly_used">Status</string>
    <string name="Power">Power</string>
    <string name="info">Info</string>
    <string name="device">Device</string>
    <string name="comment">Comment</string>
    <string name="operational_information">Operational information</string>
    <string name="open_time">Open time</string>
    <string name="service_hotline">Service hotline</string>
    <string name="at_this_station">桩</string>
    <string name="comments">Comment</string>
    <string name="and_">and</string>
    <string name="connector">connector</string>
    <string name="status_type_idle">Idle</string>
    <string name="status_type_Offline">Offline</string>
    <string name="status_type_Plugged">Plugged</string>
    <string name="status_type_Finished">Finished</string>
    <string name="status_type_Charging">Charging</string>
    <string name="status_type_Unavailable">Unavailable</string>
    <string name="status_type_Faulted">Faulted</string>
    <string name="status_type_Reserved">Reserved</string>
    <string name="the_comment_has_been_deleted">The comment has been deleted</string>
    <string name="replies">replies</string>
    <string name="reply">Reply </string>
    <string name="comment_details">Comment Details</string>
    <string name="say_something">Reply Abayo Stevens...</string>
    <string name="Operation_timed_out">Operation timeout</string>
    <string name="The_operation_may_be">The operation may succeed. Please click OK to return to the previous page</string>
    <string name="charging_gun">Charging Connector</string>
    <string name="price_information">Price information</string>
    <string name="electricity_fee">Electricity fee</string>
    <string name="server_fee">Service fee</string>
    <string name="parking_fee">Parking fee</string>
    <string name="payment">Payment</string>
    <string name="credit_card">Credit card</string>
    <string name="charging_card">Charging card</string>
    <string name="how_to_use_this_charger">How to use this charger</string>
    <string name="please_click_here_to_refresh_after_connecting_the_connector">Please &lt;font color=&quot;#00A0E9&quot;&gt;click here&lt;/font&gt; to refresh after connecting the connector</string>
    <string name="start_charging">Start charging</string>
    <string name="charging_settings">Charging Settings</string>
    <string name="quick_charge">快充</string>
    <string name="set_time">Set time</string>
    <string name="duration">Charging time</string>
    <string name="set_energy">Set energy</string>
    <string name="charging_energy">Charging energy</string>
    <string name="set_soc">SOC(%)</string>
    <string name="payment_detail">Payment Details</string>
    <string name="card">Card</string>
    <string name="please_enter_the_card_number">Please enter the card number</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="first_name">First Name</string>
    <string name="enter_the_first_name">enter the first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_the_last_name">enter the last name</string>
    <string name="correctcardnumber">Please enter the correct card number</string>
    <string name="correctyear">Please enter the correct year</string>
    <string name="correctmonth">Please enter the correct month</string>
    <string name="correctfirstname">Please enter the correct first name</string>
    <string name="correctlastname">Please enter the correct last name</string>
    <string name="correctcvc">Please enter the correct cvc</string>
    <string name="success">success</string>
    <string name="use_tutorial">Use tutorial</string>
    <string name="view_all_comments">View all comments</string>
    <string name="there_are_no_vehicles_charging">No charging station information</string>
    <string name="Waiting">Waiting</string>
    <string name="Stop_charging">Stop</string>
    <string name="stop_">Stop</string>
    <string name="areyousurrestop_">Are you sure yore done charging?</string>
    <string name="voltage">Voltage</string>
    <string name="current">Current</string>
    <string name="power">Power</string>
    <string name="start_time">Start time</string>
    <string name="charging_fee">Charging fee</string>
    <string name="charging_fee1">Charging fee</string>
    <string name="scan">扫一扫</string>
    <string name="place_qr_code_in_box">Tap to turn light on</string>
    <string name="energy">Energy</string>
    <string name="Consumption">Consumption</string>
    <string name="information">Information</string>
    <string name="amount_of_consumption">Amount of Consumption</string>
    <string name="Date">Date</string>
    <string name="spendTime">Spend Time</string>
    <string name="Money">Money</string>
    <string name="Desc">Desc</string>
    <string name="Asc">Asc</string>
    <string name="charging_record">Charging Record</string>
    <string name="order_number">Order number</string>
    <string name="Connector">Connector</string>
    <string name="End_time">End time</string>
    <string name="energy_kwh">Energy(kWh)</string>
    <string name="cvc">CVC</string>
</resources>