<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.evport.businessapp.ui.state.SignUpViewModel" />

        <variable
            name="click"
            type="com.evport.businessapp.ui.page.SignCodeFragment.ClickProxy" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_gradient"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_22"
                android:layout_marginTop="107dp"
                android:background="@drawable/sign_up"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/im_bugourd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_22"
                android:background="@drawable/logo_bugroud"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/email"
                drawable_radius="@{8}"
                drawable_solidColor="@{@color/light_green}"
                drawable_strokeWidth="@{1}"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="46dp"
                android:drawableStart="@drawable/icon_message"
                android:drawablePadding="5dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="@dimen/dp_24"
                android:fontFamily="@font/manrope_medium"
                android:hint="@string/user_email"
                android:paddingStart="12dp"
                android:singleLine="true"
                android:text="@={vm.email}"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/im_bugourd"
               />




            <EditText
                android:id="@+id/emailCode"
                drawable_radius="@{8}"
                drawable_solidColor="@{@color/light_green}"
                drawable_strokeWidth="@{1}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:drawableStart="@drawable/icon_verificatio_code"
                android:drawablePadding="5dp"
                android:fontFamily="@font/manrope_medium"
                android:hint="@string/verification_code"
                android:paddingStart="12dp"
                android:singleLine="true"
                android:textSize="14sp"
                android:text="@={vm.emailCode}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/sendCode"
                drawable_enabled_radiusRB="@{8}"
                drawable_enabled_radiusRT="@{8}"
                drawable_enabled_solidColor="@{@color/colorTheme}"
                drawable_radiusRB="@{8}"
                drawable_radiusRT="@{8}"
                drawable_solidColor="@{@color/color_e8CCCE9}"
                drawable_strokeWidth="@{1}"
                android:layout_width="60dp"
                android:layout_height="@dimen/dp_42"
                android:fontFamily="@font/manrope_medium"
                android:gravity="center"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:onClick="@{()->click.sendEmailCode()}"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/emailCode"
                app:layout_constraintEnd_toEndOf="@id/emailCode"
                app:layout_constraintRight_toRightOf="@id/emailCode"
                app:layout_constraintTop_toTopOf="@id/emailCode" />



            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/selector_bg"
                android:enabled="false"
                android:onClick="@{()->click.signUp()}"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailCode" />

            <LinearLayout
                android:id="@+id/register_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login">

                <TextView
                    android:id="@+id/clicktoapi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/reset_you_agree_to_our"
                    android:textColor="@color/light_text_color"
                    android:textSize="@dimen/dp_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:onClick="@{()->click.userAgreement()}"
                    android:text="@string/reset_user_agreement"
                    android:textColor="@color/colorTheme"
                    android:textSize="@dimen/dp_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/reset_and"
                    android:textColor="@color/light_text_color"
                    android:textSize="@dimen/dp_12" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginRight="@dimen/dp_20"
                android:onClick="@{()->click.privacyPolicy()}"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/reset_privacy_policy"
                android:textColor="@color/colorTheme"
                android:textSize="@dimen/dp_12"
                app:layout_constraintTop_toBottomOf="@+id/register_ll" />



                <TextView
                    android:id="@+id/tv_cfee1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autoSizeMaxTextSize="@dimen/sp_14"
                    android:autoSizeMinTextSize="6sp"
                    android:drawableStart="@drawable/icon_back_2"
                    android:drawablePadding="@dimen/dp_6"
                    android:fontFamily="@font/manrope_medium"
                    android:layout_marginBottom="41dp"
                    android:gravity="center"
                    android:text="Return to login page"
                    android:onClick="@{()->click.toLogin()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textColor="@color/colorTheme"
                    android:textSize="14sp"
                    />






        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>